# 30.1_DjangoLMS

./: .env.example  .gitignore  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  dockerfile  docs.py  pyproject.toml
.github/workflows/: main.yml
config/: settings.py  urls.py
lms/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_lesson_options_payment.py  0005_payment_price.py  0006_course_created_at_course_updated_at.py
semantic_mapper/: README.md  editor.py  export_mm.py  parser.py  runner.py  semantic_map  semantic_map.mm  visualizer.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  sirializers.py  tasks.py  urls.py  views.py
users/management/commands/: create_groups.py  create_payments.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_payment.py  0003_delete_payment.py
users/migrations/commands/: create_payments.py
